--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "typescript": "^3.7.5"
   },
   "devDependencies": {
-    "@types/node": "^13.7.0"
+    "@types/node": "^13.7.0",
+    "ts-node": "^8.6.2"
   },
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "eg": "yarn ts-node src/_examples/custom.ts"
   }
 }
