--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,8 @@
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "esModuleInterop": true
-  }
+  },
+  "files": [
+    "src/themec.ts"
+  ]
 }
