--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "typescript": "^3.7.5"
   },
   "devDependencies": {
+    "@riotjs/compiler": "^4.6.0",
+    "@riotjs/parcel-plugin-riot": "^4.0.1",
     "@types/node": "^13.7.0",
-    "@types/puppeteer-core": "^2.0.0",
-    "puppeteer-core": "^2.1.1",
+    "parcel-bundler": "^1.12.4",
+    "riot": "^4.9.0",
     "ts-node": "^8.6.2"
   },
   "scripts": {
