--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "themec",
+  "name": "@creatorqsf/themec",
   "version": "0.0.1",
   "main": "index.js",
   "files": [
@@ -11,13 +11,13 @@
   "dependencies": {
     "@types/color": "^3.0.1",
     "color": "^3.1.2",
-    "csstype": "^2.6.8",
     "typescript": "^3.7.5"
   },
   "devDependencies": {
     "@riotjs/compiler": "^4.6.0",
     "@riotjs/parcel-plugin-riot": "^4.0.1",
     "@types/node": "^13.7.0",
+    "csstype": "^2.6.8",
     "parcel-bundler": "^1.12.4",
     "riot": "^4.9.0",
     "ts-node": "^8.6.2"
