--- a/package.json
+++ b/package.json
@@ -1,29 +1,38 @@
 {
-  "name": "@creatorqsf/themec",
-  "version": "1.0.0",
-  "main": "index.js",
-  "files": [
-    "dist/"
-  ],
-  "author": "Qs-F",
-  "license": "MIT",
-  "private": false,
-  "dependencies": {
-    "@types/color": "^3.0.1",
-    "color": "^3.1.2",
-    "typescript": "^3.7.5"
-  },
-  "devDependencies": {
-    "@riotjs/compiler": "^4.6.0",
-    "@riotjs/parcel-plugin-riot": "^4.0.1",
-    "@types/node": "^13.7.0",
-    "csstype": "^2.6.8",
-    "parcel-bundler": "^1.12.4",
-    "riot": "^4.9.0",
-    "ts-node": "^8.6.2"
-  },
-  "scripts": {
-    "build": "tsc",
-    "eg": "yarn ts-node src/_examples/custom.ts"
-  }
+    "name": "@creatorqsf/themec",
+    "version": "1.0.0",
+    "main": "dist/themec.ts",
+    "types": "dist/themec.d.ts",
+    "files": [
+        "dist/"
+    ],
+    "repository": "git@github.com:Qs-F/themec.git",
+    "author": "Qs-F",
+    "license": "MIT",
+    "private": false,
+    "keywords": [
+        "dark mode",
+        "theme",
+        "color",
+        "css variable",
+        "branding"
+    ],
+    "dependencies": {
+        "@types/color": "^3.0.1",
+        "color": "^3.1.2",
+        "typescript": "^3.7.5"
+    },
+    "devDependencies": {
+        "@riotjs/compiler": "^4.6.0",
+        "@riotjs/parcel-plugin-riot": "^4.0.1",
+        "@types/node": "^13.7.0",
+        "csstype": "^2.6.8",
+        "parcel-bundler": "^1.12.4",
+        "riot": "^4.9.0",
+        "ts-node": "^8.6.2"
+    },
+    "scripts": {
+        "build": "tsc",
+        "eg": "yarn ts-node src/_examples/custom.ts"
+    }
 }
