--- a/package.json
+++ b/package.json
@@ -1,38 +1,36 @@
 {
-    "name": "@creatorqsf/themec",
-    "version": "1.0.1",
-    "main": "dist/themec.ts",
-    "types": "dist/themec.d.ts",
-    "files": [
-        "dist/"
-    ],
-    "repository": "git@github.com:Qs-F/themec.git",
-    "author": "Qs-F",
-    "license": "MIT",
-    "private": false,
-    "keywords": [
-        "dark mode",
-        "theme",
-        "color",
-        "css variable",
-        "branding"
-    ],
-    "dependencies": {
-        "@types/color": "^3.0.1",
-        "color": "^3.1.2",
-        "typescript": "^3.7.5"
-    },
-    "devDependencies": {
-        "@riotjs/compiler": "^4.6.0",
-        "@riotjs/parcel-plugin-riot": "^4.0.1",
-        "@types/node": "^13.7.0",
-        "csstype": "^2.6.8",
-        "parcel-bundler": "^1.12.4",
-        "riot": "^4.9.0",
-        "ts-node": "^8.6.2"
-    },
-    "scripts": {
-        "build": "tsc",
-        "eg": "yarn ts-node src/_examples/custom.ts"
-    }
+  "name": "@creatorqsf/themec",
+  "version": "1.0.1",
+  "main": "dist/themec.js",
+  "types": "dist/themec.d.ts",
+  "files": [
+    "dist/"
+  ],
+  "repository": "git@github.com:Qs-F/themec.git",
+  "author": "Qs-F",
+  "license": "MIT",
+  "private": false,
+  "keywords": [
+    "dark mode",
+    "theme",
+    "color",
+    "css variable",
+    "branding"
+  ],
+  "dependencies": {
+    "color": "^3.1.2",
+    "typescript": "^3.7.5"
+  },
+  "devDependencies": {
+    "@riotjs/compiler": "^4.6.0",
+    "@riotjs/parcel-plugin-riot": "^4.0.1",
+    "@types/color": "^3.0.1",
+    "@types/node": "^13.7.0",
+    "csstype": "^2.6.8",
+    "parcel-bundler": "^1.12.4"
+  },
+  "scripts": {
+    "build": "tsc",
+    "eg": "yarn parcel _examples/index.html"
+  }
 }
